# advisoryai-hackathon

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  dump.rdb  render-native.yaml  render.yaml  requirements.txt
backend/: __init__.py  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini  setup.cfg
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  audit.py  demo.py  documents.py  jobs.py  regeneration.py  rendering.py  sections.py  templates.py
backend/app/domains/assembly/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/domains/audit/: __init__.py  generation_audit_service.py  generation_schemas.py  models.py  repository.py  schemas.py  service.py
backend/app/domains/document/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/domains/generation/: __init__.py  errors.py  llm_client.py  models.py  repository.py  schemas.py  section_output_errors.py  section_output_models.py  section_output_repository.py  section_output_schemas.py  service.py  (+3 more)
backend/app/infrastructure/: database.py  datetime_utils.py  demo_seeding.py  errors.py  redis.py  storage.py
backend/app/migrations/: env.py
backend/app/worker/: main.py
backend/coverage/: README.md
backend/scripts/: run_tests.sh  verify_persistence.py
backend/tests/: __init__.py  conftest.py
backend/tests/assembly/: conftest.py  test_determinism.py  test_integrity.py  test_persistence.py  test_successful_assembly.py
backend/tests/observability/: __init__.py  test_observability.py
backend/tests/regeneration/: __init__.py  test_regeneration.py
backend/tests/rendering/: conftest.py  test_determinism.py  test_formatting_preservation.py  test_persistence.py  test_rendering_failure.py  test_rendering_success.py
backend/tests/test_api/: test_api_contracts.py
backend/tests/test_classification/: __init__.py  test_classification_audit.py  test_classification_determinism.py  test_classification_job.py  test_classification_service.py  test_llm_classifier.py  test_rule_based_classifier.py  test_section_persistence.py
backend/tests/test_config/: __init__.py  test_settings.py
backend/tests/test_infrastructure/: test_audit_logging.py  test_database.py  test_storage.py
backend/tests/test_jobs/: __init__.py  test_job_system.py
backend/tests/test_parsing/: __init__.py  test_template_parsing.py
backend/tests/test_repositories/: __init__.py  test_audit_repository.py  test_document_repository.py  test_job_repository.py  test_section_repository.py  test_template_repository.py
backend/tests/versioning/: conftest.py  test_atomicity.py  test_audit.py  test_idempotency.py  test_persistence.py  test_version_creation.py
(+103 files in other folders)
